apps/base/media/homarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homarr
  template:
    metadata:
      labels:
        app: homarr
    spec:
      dnsPolicy: None
      dnsConfig:
        nameservers:
          - 10.0.0.20
      containers:
      - name: homarr
        image: ghcr.io/homarr-labs/homarr:v1.29.0

        securityContext:
          allowPrivilegeEscalation: false
          
        ports:
        - containerPort: 7575
        volumeMounts:
        - name: appdata
          mountPath: /appdata
      volumes:
      - name: appdata
        hostPath:
          path: /mnt/data/configs/homarr/appdata
          type: Directory
