apps/base/media/homarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homarr
spec:
  selector:
    app: homarr
  ports:
    - port: 7575
      targetPort: 7575
  type: ClusterIP
